
Add new mask bit: NEARWHOPPER.  This effects the following routines:
              EXTRACT_OBJECT, FLUXCORR_NEW, MYFLUXCALIB, TELLURIC_CORR.
              These fibers are also implicitly ignored by sky-subtraction
              because the sky-fiber selection implicitly assumes all fiber-
              mask bits are fatal (in EXTRACT_OBJECT).

-------------------------------------------------------------------------------
v4_7_0 (Mar 16, 2001)

FLUXCORR_NEW: Replace deviant fluxcorr coefficients with the median
              Attempt to mask large positive deviations in inverse variance
              (PR #2040) 
SPCOMBINE:    combinedir is now a keyword for spcoadd_frames.
              SPFLUX and SPCOADD_FRAMES utilize directory keywords as well.
              Start by zeroing-out the 4 mask bits set by combining step.
FIBERFLAT:     Simple check to exclude extrema  (PR #2123)
COMBINE1FIBER: Replace the lines which errantly set NODATA with a check for the
               extrema wavelengths which have no signal. (PR #1939)
SPPLANCOMB, 
SPALLCOMBINE:  Fixed Bug to combine a specific MJD

BSPLINE_ITERFIT (in idlutils): Modified to avoid crashing SPREDUCE1D.
   Two changes: (1) Return a valid solution even in the case where the variance
   of the y-vector is zero.  (2) In the case where there are too few points to
   fit, still return a valid solution of all zeros.
FINDSPEC: New routine for finding SDSS spectra that match a given RA, DEC.
MULTISYNTHSPEC: New routine that is sometimes faster than SYNTHSPEC, but
           I would not recommend using this yet.
MYFLUXCALIB: Make robust to degenerate case of only 1 input spectro-photo std.
PLATELIST: Lower (S/N)^2 cutoff to 13 for all G,I bands (from 15 previously).
           If ZWARNING flag exists in 1D outputs, use that to determine
           number of UNKNOWN or SKY identifications.
PLOTSPEC: Add ZNUM option (also new to READSPEC).
READSPEC: Add option to generate the synthetic spectra.