@@ -35,6 +35,7 @@
 ;   reject_flat()
 ;   sdssproc
 ;   sortplugmap()
+;   splog
 ;   trace320crude
 ;   traceset2xy
 ;   xy2traceset
@@ -104,14 +105,15 @@ function quicktrace, filename, tsetfile, plugmapfile, nbin=nbin
    nocrs = median(flux,3)   ; 3x3 median filter
    noargon = nocrs
    ntrace = (size(nocrs))[2]
-   for i=0,ntrace -1 do noargon[*,i] = median(noargon[*,i],21)
+   for i=0,ntrace -1 do noargon[*,i] = median(noargon[*,i],15)
    argonlevel = total(nocrs - noargon,1)
    djs_iterstat, argonlevel, median=medargon, sigma=sigargon
    argonsn = medargon / (sigargon /sqrt(ntrace))
 
-   ; argonsn = 5 looks to be about normal, argonsn > 10 should throw warning
-   if argonsn GT 10.0 then $
-      splog,'WARNING: Argon is present, significance is :', argonsn
+   ; ARGONSN = 5 looks to be about normal, argonsn > 15 should throw warning
+
+   if (argonsn GT 15.0) then $
+    splog,'WARNING: Emission lines (Argon?) in flats at significance=', argonsn
 
    ;----------
    ; Write traceset to FITS file
